[tool.poetry]
name = "python-leetcode"
version = "0.1.0"
description = ""
authors = ["Natália Oliveira <nataliaferreiraoliveira1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
